# iPIC3D-GPU-SPACE-CoE

./: .gitignore  CMakeLists.txt  README.md  iPIC3D.cpp
benchmark/GEM3Dsmall_1x1x1_100/data/: SimulationData.txt
build_/: CMakeCache.txt  Makefile  cmake_install.cmake  iPIC3D
build_/share/inputfiles/: Makefile  cmake_install.cmake
build_nvhpc/: CMakeCache.txt  Makefile  bind.sh  cmake_install.cmake  iPIC3D  strong.sh  strong_1.out  strong_1.sh  strong_1_new.inp  test.out
build_nvhpc/data/: ConservedQuantities.txt  SimulationData.txt
build_nvhpc/inputfiles/: Makefile  cmake_install.cmake
inputfiles/: GEM3D.inp  Maxwell2D.inp  strong_1.inp  weak_1.inp  weak_16.inp  weak_2.inp  weak_32.inp  weak_4.inp  weak_64.inp  weak_8.inp
share/inputfiles/: Maxwell.inp
share/inputfiles/magneticReconnection/: GEM3DCompression.inp  ScalingTestGEM3D.inp  strong_16.inp  weak_1.inp  weak_16.inp
src/include/: ADIOS2IO.hpp  Basic.h  Collective.h  Com3DNonblk.h  ECSIM_Moments.h  EMfields3D.h  GMRES.h  Grid3DCU.h  Larray.h  Neighbouring_Nodes.h  ParallelIO.h  Particle.h  Particles3D.h  Particles3Dcomm.h  aligned_vector.h  iPic3D.h  ipicdefs.h  ipicmath.h
src/include/CUDA/: arrayCUDA.cuh  cudaTypeDef.cuh  gridCUDA.cuh  mergingKernel.cuh  momentKernel.cuh  moverKernel.cuh  particleArrayCUDA.cuh  particleArraySoACUDA.cuh  particleControlKernel.cuh  particleExchange.cuh
src/include/dataAnalysis/: cudaReduction.cuh  dataAnalysis.cuh  dataAnalysisConfig.cuh
src/include/dataAnalysis/GMM/: cudaGMM.cuh  cudaGMMUtility.cuh  cudaGMMkernel.cuh
src/include/dataAnalysis/Histogram/: velocityHistogram.cuh
src/include/hip/: hipifly.hpp
src/ipic3d/: iPIC3D.cpp
src/ipic3d/communication/: Com3DNonblk.cpp
src/ipic3d/cudaKernel/: exitingKernel.cu  mergingKernel.cu  momentKernel.cu  moverKernel.cu  partickeControlKernel.cu  particleArraySoACUDA.cu  particleControlKernel.cu  sortingKernel.cu
src/ipic3d/dataAnalysis/: dataAnalysis.cu  velocityHistogram.cu  velocityHistogramKernel.cu
src/ipic3d/fields/: EMfields3D.cpp
src/ipic3d/grids/: Grid3DCU.cpp
src/ipic3d/inputoutput/: ADIOS2IO.cpp  ParallelIO.cpp
src/ipic3d/main/: Collective.cpp  iPIC3Dlib.cu
src/ipic3d/particles/: Particles3D.cpp  Particles3Dcomm.cpp
src/ipic3d/performances/: LeXInt_Timer.hpp
src/ipic3d/solvers/: GMRES.cpp
src/ipic3d/utility/: IDgenerator.cpp
src/ipic3d/utility/new/: diagnostics.cpp
src/unitTest/histogram/: CMakeLists.txt  histogramTest.cu
src/unitTest/histogram/2D/: CMakeLists.txt  histogramTest.cu
src/unitTest/histogram/3D/: CMakeLists.txt  histogram3DTest.cu
src/unitTest/reduction/: CMakeLists.txt
